--- a/try.html
+++ b/try.html
@@ -1,8 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Face-to-Face Loader</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    /* Smooth Black & White Animated Background */
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Poppins', sans-serif;
+      color: white;
+      text-align: center;
+      background: linear-gradient(135deg, #000000, #1a1a1a, #333333, #666666, #ffffff);
+      background-size: 400% 400%;
+      animation: bwFlow 20s ease infinite;
+    }
+
+    @keyframes bwFlow {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+      animation: popIn 1s ease;
+    }
+
+    @keyframes popIn {
+      from { transform: scale(0.8); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+
+    #loader-container {
+      width: 80%;
+      height: 20px;
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 10px;
+      overflow: hidden;
+      margin-bottom: 15px;
+    }
+
+    #loader-bar {
+      height: 100%;
+      width: 100%; /* Always full, no loading animation */
+      background: white;
+    }
+
+    #status {
+      font-size: 1.2rem;
+      margin-top: 10px;
+    }
+
+    video {
+      border: 4px solid white;
+      border-radius: 15px;
+      margin-top: 20px;
+      box-shadow: 0px 0px 20px rgba(255,255,255,0.7);
+    }
+
+    /* Floating emoji stickers */
+    .sticker {
+      position: absolute;
+      font-size: 2rem;
+      animation: float 5s ease-in-out infinite;
+    }
+
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-20px); }
+    }
+  </style>
 </head>
 <body>
   <h1>👀 Face-to-Face Loader</h1>
@@ -15,34 +90,38 @@
   
   <video id="video" width="320" height="240" autoplay muted playsinline></video>
 
-  <script src="https://unpkg.com/face-api.js"></script>
+  <!-- Fun floating stickers -->
+  <div class="sticker" style="top: 10%; left: 5%;">📸</div>
+  <div class="sticker" style="top: 20%; right: 5%;">😎</div>
+  <div class="sticker" style="bottom: 15%; left: 10%;">👋</div>
+  <div class="sticker" style="bottom: 10%; right: 10%;">🤳</div>
 
   <script>
     async function startCamera() {
-      try {
-        // Force browser to ask for permission again by stopping old streams
-        const oldVideo = document.getElementById('video');
-        if (oldVideo.srcObject) {
-          oldVideo.srcObject.getTracks().forEach(track => track.stop());
-        }
+      const video = document.getElementById('video');
 
-        // Ask for camera every time
-        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-        const video = document.getElementById('video');
+      // Stop old streams if any
+      if (video.srcObject) {
+        video.srcObject.getTracks().forEach(track => track.stop());
+        video.srcObject = null;
+      }
+
+      try {
+        const stream = await navigator.mediaDevices.getUserMedia({
+          video: { facingMode: "user" },
+          audio: false
+        });
+
         video.srcObject = stream;
-        document.getElementById('status').textContent = "LOADING your page. LOOOK HERE !! 😈";
+        document.getElementById('status').textContent = "Camera started. Detecting your face... 😈";
+
       } catch (err) {
         document.getElementById('status').textContent = "Camera access denied 🚫";
         console.error("Camera error:", err);
       }
     }
 
-    // Ask permission on every reload
-    window.addEventListener('load', () => {
-      startCamera();
-    });
+    window.addEventListener('load', startCamera);
   </script>
-
-  <script src="script.js"></script>
 </body>
 </html>
